--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@ section {
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>27 June 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Father no :</strong> <span>+91-9794101548</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Mother no :</strong> <span>+91-9794101548</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7905484495</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Ghaziabad, Uttar Pradesh</span></li>
                 </ul>
@@ -1378,7 +1378,7 @@ section {
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Current Address</a></h4>
-            <p class="description">264-A Regal Shipra Sun City, Vaibhav Khand, Indirapuram, Ghaziabad, Uttar Pradesh 201014, India </p>
+            <p class="description">Tower 7 503 Nirala Estate, Tech Zone IV, Greater Noida West, Uttar Pradesh 201306, India </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
@@ -1430,7 +1430,7 @@ section {
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="https://s3.ap-south-1.amazonaws.com/247-post/img/16b1a470-de0b-11ec-8b9f-9dea75739854.png" class="testimonial-img" alt="">
-                <h3>Harish Srivastava <br>& <br> Veena Srivastava</h3>
+                <h3>Late Harish Srivastava <br>& <br> Veena Srivastava</h3>
                 <h4>Father & Mother</h4>
               </div>
             </div><!-- End testimonial item -->
