--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,7 @@ section {
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>More than 4+ years of exprience in IT profession. Start woking as software developer currently work as Technical Lead. I love space🚀 exploration,games⚽,movies
+          <p>More than 5+ years of exprience in IT profession. Start woking as software developer currently work as Technical Lead. I love space🚀 exploration,games⚽,movies
             DC fan.</p>
         </div>
 
@@ -1426,11 +1426,11 @@ section {
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  My Father Woking as Bussiness Man and my mother is work as sales women. currently Both retried from thier duties.
+                  My Father was Woking as Bussiness Man and my mother is work as sales women. currently Both retried from thier duties.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
                 <img src="https://s3.ap-south-1.amazonaws.com/247-post/img/16b1a470-de0b-11ec-8b9f-9dea75739854.png" class="testimonial-img" alt="">
-                <h3>Late Harish Srivastava <br>& <br> Veena Srivastava</h3>
+                <h3> Late Harish Srivastava <br>& <br> Veena Srivastava</h3>
                 <h4>Father & Mother</h4>
               </div>
             </div><!-- End testimonial item -->
