--- a/index.html
+++ b/index.html
@@ -1374,7 +1374,7 @@ section {
           <p>We are looking for someone who is ready to share responsibility and happiness.She should have good communication skill to mange & maintain relation with family members and relatives.</p>
         </div>
 <hr><br>
-        <div class="row">
+       <!--  <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><a href="">Current Address</a></h4>
@@ -1389,7 +1389,7 @@ section {
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Village Address</a></h4>
             <p class="description">Vill Nadauan, Near Pokhra, P.O- BaniyaPur, Distt-Chhapra, Bihar 841403, India </p>
-          </div>
+          </div>-->
          <!-- <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="bi bi-binoculars"></i></div>
             <h4 class="title"><a href="">Magni Dolores</a></h4>
