--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@ section {
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hridendra Srivastava</h1>
-      <p><span class="typed" data-typed-items="Technical Lead at Radius Synergies"></span></p>
+      <p><span class="typed" data-typed-items="Technical Lead"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -1039,7 +1039,7 @@ section {
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Tech Lead (Radius Synergies Int Pvt Ltd.)</h3>
             <p class="fst-italic">
-              Highly skilled in  Java | Spring Boot | MongoDB | No SQL(Apache Solr, Redis) | My Sql | IOT | EC2 AWS | Algorithms | ML| Smart metering | Hes | MDM | Smart Grid
+              Highly skilled in  Java | Spring Boot | MongoDB | No SQL(Apache Solr, Redis) | My Sql | IOT | EC2 AWS | Algorithms | ML| Smart metering | Hes | MDM | Smart Grid at Radius Synergies
             </p>
             <div class="row">
               <div class="col-lg-6">
