--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@ section {
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Hridendra Srivastava</h1>
-      <p><span class="typed" data-typed-items="Technical Lead"></span></p>
+      <!--<p><span class="typed" data-typed-items="Technical Lead"></span></p>-->
     </div>
   </section><!-- End Hero -->
 
@@ -1411,7 +1411,7 @@ section {
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials section-bg">
+<!--<section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
         <div class="section-title">
@@ -1486,7 +1486,7 @@ section {
                 <h3>Vishwajeet Srivastava</h3>
                 <h4>Cousin Brother</h4>
               </div>
-            </div><!-- End testimonial item -->
+            </div>--><!-- End testimonial item -->
 
           </div>
           <div class="swiper-pagination"></div>
